fix z-index of the pone icon

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: "Montserrat";
+
 }
 
 h1 {
@@ -25,6 +26,7 @@ h3 {
 #title {
     background-color: #ff4c68;
     color: white;
+    
 }
 
 
@@ -56,11 +58,7 @@ h3 {
     margin: 5% 3% 5% 0;
 }
 
-/* title image */
-.title-image {
-    width: 60%;
-    transform: rotate(25deg);
-}
+
 
 /* features secton */
 
@@ -83,8 +81,20 @@ h3 {
     color: #8f8f8f;
 }
 
+/* title image */
+.title-image {
+    width: 60%;
+    transform: rotate(25deg);
+    position:relative;
+    z-index: 1;
+}
+
 #features {
     margin: 7% 15%;
+    background-color: #fff;
+    position: relative;
+    z-index: 2;
+
 }
 
 /* Testimonial section */
